# nginx-certbot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  certbot_check.sh  certbot_init.sh  docker-compose.yml  install.sh  main.py  pyproject.toml  run_vpn.sh
certbot/conf/accounts/acme-v02.api.letsencrypt.org/directory/99c0da506e23a055444abeb9a3c1bc58/: meta.json  private_key.json  regr.json
certbot/conf/accounts/acme-v02.api.letsencrypt.org/directory/b5a9d88648eda9d69f78b9520584f40a/: meta.json  private_key.json  regr.json
certbot/conf/archive/kurs.rockxi.ru/: cert1.pem  fullchain1.pem  privkey1.pem
certbot/conf/archive/vpn.rockxi.ru/: cert1.pem  fullchain1.pem  privkey1.pem
certbot/conf/live/kurs.rockxi.ru/: cert.pem  chain.pem  fullchain.pem  privkey.pem
certbot/conf/live/vpn.rockxi.ru/: cert.pem  chain.pem  fullchain.pem  privkey.pem
certbot/conf/renewal/: kurs.rockxi.ru.conf  vpn.rockxi.ru.conf
nginx/: default.conf  default.conf.backup  default.conf.bak  error.html  error_couch.html  index.html
